--- a/static/css/home.css
+++ b/static/css/home.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    box-sizing: border-box;
 }
 
 /* ---- Challenge tile ---- */
